# neobdb

./: Cargo.toml
data/: beer.db
src/: _todo.md  beer_struct.rs  config.rs  db.rs  main.rs  pdf.rs  todo.md  tui_frm.rs  tui_gen.rs  tui_gen.rs.bak  tui_inp.rs  tui_menu.rs  tui_menu.rs.bak  ui.rs
