[package]
name = "neobdb"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
crossterm = "0.26.1"
dirs = "5.0.1"
getch = "0.3.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.4", features = ["serde", "v4"] }
